--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.13",
+        "dotenv": "^16.0.3",
         "eslint": "^8.0.1",
         "postcss": "^8.4.21",
         "prettier": "^2.8.2",
